# Gremlin-

./: .gitignore  AddEdgeStartStep.cpp  AddEdgeStartStep.h  AddEdgeStep.cpp  AddEdgeStep.h  AddPropertyStep.cpp  AddPropertyStep.h  AddVertexStartStep.cpp  AddVertexStartStep.h  AddVertexStep.cpp  AddVertexStep.h  ApplicableStep.h  ByModulating.h  C.h  CMakeLists.txt  CoalesceStep.h  CountStep.h  Direction.h  Edge.cpp  Edge.h  Element.h  FromStep.cpp  FromStep.h  Graph.cpp  Graph.h  GraphStep.cpp  GraphStep.h  GraphTraversal.cpp  GraphTraversal.h  GraphTraversalSource.cpp  GraphTraversalSource.h  Gremlin++.cbp  HasStep.cpp  HasStep.h  IdStep.cpp  IdStep.h  IdentityStep.h  Makefile  MinStep.h  NoOpStep.cpp  (+25 more)
bindings/: PyGremlin.cpp
gremlinxx/: gremlinxx.h  gremlinxx_utils.h
step/: IdStep.h  InjectStep.h  TraversalStep.cpp  TraversalStep.h
step/controlflow/: CoalesceStep.cpp  CoalesceStep.h  EmitStep.cpp  EmitStep.h  InjectStep.cpp  InjectStep.h  LoopsStep.cpp  LoopsStep.h  RepeatStep.cpp  RepeatStep.h  TimesStep.cpp  TimesStep.h  UnionStep.cpp  UnionStep.h  UntilStep.cpp  UntilStep.h
step/edge/: AddEdgeStartStep.cpp  AddEdgeStartStep.h  AddEdgeStep.cpp  AddEdgeStep.h
step/embedding/: EmbeddingStep.cpp  EmbeddingStep.h  EncodeStep.cpp  EncodeStep.h  LikeStep.cpp  LikeStep.h  SimilarityStep.cpp  SimilarityStep.h
step/filter/: IsStep.cpp  IsStep.h  LimitStep.cpp  LimitStep.h  LimitSupportingStep.h  SampleStep.cpp  SampleStep.h  WhereStep.cpp  WhereStep.h
step/graph/: GraphStep.cpp  GraphStep.h  IdStep.cpp  IdStep.h  SubgraphExtractionStep.cpp  SubgraphExtractionStep.h  SubgraphStep.cpp  SubgraphStep.h  VStep.cpp  VStep.h
step/logic/: CoalesceStep.h  DedupStep.cpp  DedupStep.h  FoldStep.cpp  FoldStep.h  IdentityStep.cpp  IdentityStep.h  LimitStep.h  MapStep.cpp  MapStep.h  NoOpStep.cpp  NoOpStep.h  OrderStep.cpp  OrderStep.h  RepeatStep.h  UnfoldStep.cpp  UnfoldStep.h  UntilStep.h  WhereStep.h
step/math/: CountStep.cpp  CountStep.h  GroupCountStep.cpp  GroupCountStep.h  MinStep.cpp  MinStep.h
step/modulate/: ByModulating.h  ByStep.cpp  ByStep.h  FromStep.cpp  FromStep.h  FromToModulating.h  ReductionStep.h  ToStep.cpp  ToStep.h
step/property/: AddPropertyStep.cpp  AddPropertyStep.h  ElementMapStep.cpp  ElementMapStep.h  HasNotStep.cpp  HasNotStep.h  HasStep.cpp  HasStep.h  PropertyStep.cpp  PropertyStep.h  ValueMapStep.cpp  ValueMapStep.h  ValueStep.cpp  ValueStep.h
step/sideeffect/: AsStep.cpp  AsStep.h  SelectStep.cpp  SelectStep.h  SideEffectStep.cpp  SideEffectStep.h
step/vertex/: AddVertexStartStep.cpp  AddVertexStartStep.h  AddVertexStep.cpp  AddVertexStep.h  DegreeStep.cpp  DegreeStep.h  VertexStep.cpp  VertexStep.h
strategy/: AddEdgeStepCompletionStrategy.h  BasicPatternExtractionStrategy.cpp  BasicPatternExtractionStrategy.h  ByModulatingStrategy.cpp  ByModulatingStrategy.h  FromToModulatingStrategy.cpp  FromToModulatingStrategy.h  HasJoinStrategy.cpp  HasJoinStrategy.h  LimitSupportingStrategy.cpp  LimitSupportingStrategy.h  NoOpRemovalStrategy.cpp  NoOpRemovalStrategy.h  RepeatStepCompletionStrategy.cpp  RepeatStepCompletionStrategy.h  RepeatUnrollStrategy.cpp  RepeatUnrollStrategy.h  SubgraphStepCompletionStrategy.cpp  SubgraphStepCompletionStrategy.h  TraversalStrategy.cpp  TraversalStrategy.h  ValueMapStepCompletionStrategy.h
structure/: Direction.h  Edge.cpp  Edge.h  Element.cpp  Element.h  Graph.h  Order.h  Property.h  Structure.cpp  Vertex.h  VertexProperty.h
structure/reference/: ReferenceEdge.h  ReferenceVertex.h
traversal/: BasicTraverserSet.cpp  BasicTraverserSet.h  Comparison.cpp  Comparison.h  GraphTraversal.cpp  GraphTraversal.h  GraphTraversalSource.cpp  GraphTraversalSource.h  P.h  PathInfo.cpp  PathInfo.h  Scope.cpp  Scope.h  SyntaxHelper.h  Traverser.cpp  Traverser.h  TraverserSet.h
util/: C.h  gremlin_utils.h  gremlin_utils.hpp
